// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page Renders properly 1`] = `
<div>
  <nav
    className="navBar navbar navbar-expand-lg navbar-light"
  >
    <a
      className="navbar-brand"
      href="/home"
      onClick={[Function]}
    >
      <img
        alt="SEER Logo"
        className="d-inline-block align-top"
        id="navbar_logo"
        src="Logo_Style1.png"
      />
    </a>
    <button
      aria-controls="basic-navbar-nav"
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
      id="basic-navbar-nav"
    >
      <div
        className="mr-auto navbar-nav"
        onKeyDown={[Function]}
      >
        <a
          className="nav-link"
          data-rb-event-key="/search-result"
          href="/search-result"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Advanced Search
        </a>
      </div>
      <img
        alt="circle"
        id="login_placeholder"
        src="placeholder_circle.png"
      />
      <a
        className="nav_button btn btn-primary"
        href="/login"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Login
      </a>
      <a
        className="nav_button btn btn-primary"
        href="/sign-up"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Sign Up
      </a>
    </div>
  </nav>
  <div
    className="homepageHeader"
  >
    <div>
      <h1
        style={
          Object {
            "fontWeight": "400",
          }
        }
      >
         Welcome to SEER! 
      </h1>
      <br />
      <h3
        style={
          Object {
            "fontWeight": "200",
          }
        }
      >
         
        A repository for Software Engineers to search for articles, 
        <br />
        journals or research papers for evidences to support their ideas.
      </h3>
    </div>
    <div
      className="homepageCTA"
      style={
        Object {
          "marginTop": "10vh",
          "paddingBottom": "5vh",
        }
      }
    >
      <h2
        style={
          Object {
            "fontWeight": "200",
            "marginBottom": "2vh",
          }
        }
      >
         
        What are you looking for?
         
      </h2>
      <form
        className="form-inline"
        id="navbar-search"
        onSubmit={[Function]}
        style={
          Object {
            "display": "block",
            "marginLeft": "auto",
            "marginRight": "auto",
          }
        }
      >
        <input
          className="mr-sm-2 form-control"
          id="title"
          onChange={[Function]}
          placeholder="Search for articles, books or researches"
          style={
            Object {
              "width": "30vw",
            }
          }
          type="text"
        />
        <button
          className="btn btn-outline-success"
          disabled={false}
          style={
            Object {
              "backgroundColor": "white",
            }
          }
          type="submit"
        >
           
          <img
            alt="search"
            id="search_icon"
            src={
              Object {
                "ReactComponent": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                },
                "__esModule": true,
                "default": "search_icon.svg",
              }
            }
          />
           
        </button>
      </form>
    </div>
    <div
      className="homepageFooter"
      style={
        Object {
          "paddingTop": "15vh",
          "textAlign": "center",
          "width": "auto",
        }
      }
    >
      <h3
        style={
          Object {
            "fontWeight": "400",
          }
        }
      >
         Brought to you by 
      </h3>
      <img
        alt="AUT Logo"
        src="AUT_Logo.png"
        style={
          Object {
            "height": "80px",
            "width": "auto",
          }
        }
      />
      <img
        alt="SERL Logo"
        src="SERL_Logo.png"
        style={
          Object {
            "height": "80px",
            "width": "auto",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Login Page Renders properly 1`] = `
<div>
  <div
    className="loginStyle"
  >
    <form
      className=""
      onSubmit={[Function]}
    >
      <h1>
        Seer Login
      </h1>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="email"
        >
          Email address
        </label>
        <input
          className="form-control"
          id="email"
          onChange={[Function]}
          placeholder="Enter email"
          type="email"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="form-control"
          id="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
        />
      </div>
      <button
        className="seer-button-styling mr-2 btn btn-primary"
        disabled={false}
        type="submit"
      >
        Login
      </button>
      <a
        href="/home"
        onClick={[Function]}
      >
        <button
          className="btn btn-secondary"
          disabled={false}
          type="submit"
        >
          Go Home
        </button>
      </a>
    </form>
  </div>
</div>
`;

exports[`Search Page Renders properly 1`] = `
<div>
  <nav
    className="navBar navbar navbar-expand-lg navbar-light"
  >
    <a
      className="navbar-brand"
      href="/home"
      onClick={[Function]}
    >
      <img
        alt="SEER Logo"
        className="d-inline-block align-top"
        id="navbar_logo"
        src="Logo_Style1.png"
      />
    </a>
    <button
      aria-controls="basic-navbar-nav"
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
      id="basic-navbar-nav"
    >
      <div
        className="mr-auto navbar-nav"
        onKeyDown={[Function]}
      >
        <a
          className="nav-link"
          data-rb-event-key="/search-result"
          href="/search-result"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Advanced Search
        </a>
      </div>
      <img
        alt="circle"
        id="login_placeholder"
        src="placeholder_circle.png"
      />
      <a
        className="nav_button btn btn-primary"
        href="/login"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Login
      </a>
      <a
        className="nav_button btn btn-primary"
        href="/sign-up"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Sign Up
      </a>
    </div>
  </nav>
  <div>
    <div
      className="row"
    >
      <div
        className="col-lg-2"
      >
        <div
          className="pro-sidebar"
          style={
            Object {
              "width": undefined,
            }
          }
        >
          <div
            className="pro-sidebar-inner"
          >
            <div
              className="pro-sidebar-layout"
            >
              <div
                className="pro-sidebar-header"
              >
                <nav
                  className="pro-menu"
                >
                  <ul>
                    <li
                      className="pro-menu-item pro-sub-menu open"
                    >
                      <div
                        className="pro-inner-item"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <span
                          className="pro-item-content"
                        >
                          Search Filters:
                        </span>
                        <span
                          className="pro-arrow-wrapper"
                        >
                          <span
                            className="pro-arrow"
                          />
                        </span>
                      </div>
                      <div
                        className="react-slidedown pro-inner-list-item"
                        onTransitionEnd={[Function]}
                      >
                        <div>
                          <ul>
                            <form
                              className=""
                              onSubmit={[Function]}
                            >
                              <div
                                className="row"
                              >
                                <div
                                  className="form-group"
                                >
                                  <label
                                    className="form-label"
                                    htmlFor="researchMethod"
                                  >
                                    Research Method
                                  </label>
                                  <select
                                    className="form-control"
                                    defaultValue=""
                                    id="researchMethod"
                                    onChange={[Function]}
                                    style={
                                      Object {
                                        "width": "12vw",
                                      }
                                    }
                                    type="text"
                                  >
                                    <option
                                      disabled={true}
                                      value=""
                                    >
                                      Select Research Method
                                    </option>
                                  </select>
                                </div>
                              </div>
                              <div
                                className="row"
                              >
                                <div
                                  className="form-group"
                                  style={
                                    Object {
                                      "width": "12vw",
                                    }
                                  }
                                >
                                  <label
                                    className="form-label"
                                    htmlFor="participants_form"
                                  >
                                    Research Participants
                                  </label>
                                </div>
                              </div>
                              <div
                                className="row"
                              >
                                <div
                                  className="form-group"
                                >
                                  <label
                                    className="form-label"
                                    htmlFor="method"
                                  >
                                    SE Method
                                  </label>
                                  <select
                                    className="form-control"
                                    defaultValue=""
                                    id="method"
                                    onChange={[Function]}
                                    style={
                                      Object {
                                        "width": "12vw",
                                      }
                                    }
                                    type="text"
                                  >
                                    <option
                                      disabled={true}
                                      value=""
                                    >
                                      Select SE Method
                                    </option>
                                  </select>
                                </div>
                              </div>
                              <div
                                className="row"
                              >
                                <div
                                  className="form-group"
                                >
                                  <label
                                    className="form-label"
                                    htmlFor="methodology"
                                  >
                                    SE Methodology
                                  </label>
                                  <select
                                    className="form-control"
                                    defaultValue=""
                                    id="methodology"
                                    onChange={[Function]}
                                    style={
                                      Object {
                                        "width": "12vw",
                                      }
                                    }
                                    type="text"
                                  >
                                    <option
                                      disabled={true}
                                      value=""
                                    >
                                      Select SE Methodology
                                    </option>
                                  </select>
                                </div>
                              </div>
                              <div
                                className="row"
                              >
                                <label
                                  className="form-label"
                                >
                                  Publication Details: 
                                </label>
                                <div
                                  className="form-group"
                                >
                                  <input
                                    className="form-control"
                                    id="authorSearch"
                                    onChange={[Function]}
                                    placeholder="Author"
                                    type="text"
                                  />
                                </div>
                                <div
                                  className="form-group"
                                >
                                  <input
                                    className="form-control"
                                    id="titleSearch"
                                    onChange={[Function]}
                                    placeholder="Title"
                                    type="text"
                                  />
                                </div>
                                <div
                                  className="form-group"
                                >
                                  <input
                                    className="form-control"
                                    id="linkSearch"
                                    onChange={[Function]}
                                    placeholder="URL or DOI"
                                    type="text"
                                  />
                                </div>
                              </div>
                              <div
                                className="row"
                              >
                                <div
                                  className="form-group"
                                >
                                  <label
                                    className="form-label"
                                    htmlFor="minDate"
                                  >
                                    Min Date: 
                                  </label>
                                  <input
                                    className="form-control"
                                    id="minDate"
                                    onChange={[Function]}
                                    placeholder="Author"
                                    type="month"
                                  />
                                </div>
                              </div>
                              <div
                                className="row"
                              >
                                <div
                                  className="form-group"
                                >
                                  <label
                                    className="form-label"
                                    htmlFor="maxDate"
                                  >
                                    Max Date: 
                                  </label>
                                  <input
                                    className="form-control"
                                    id="maxDate"
                                    onChange={[Function]}
                                    placeholder="Title"
                                    type="month"
                                  />
                                </div>
                              </div>
                              <button
                                className="seer-button-styling btn btn-primary"
                                disabled={false}
                                type="submit"
                              >
                                Search
                              </button>
                            </form>
                          </ul>
                        </div>
                      </div>
                    </li>
                  </ul>
                </nav>
              </div>
            </div>
          </div>
          <div
            aria-label="overlay"
            className="overlay"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          />
        </div>
      </div>
      <div
        className="mt-5 col-lg-8"
      >
        <div
          className="searchFieldContainer"
        >
          <form
            className=""
          >
            <div
              className="form-group"
            >
              <label
                className="form-label"
                htmlFor="descriptionSearch"
              >
                <h4>
                  Search:
                </h4>
              </label>
              <input
                className="form-control"
                id="descriptionSearch"
                placeholder="Enter a keyword or phrase to search for evidences"
                type="text"
              />
            </div>
            <div
              className="form-group"
            >
              <div
                className="row"
              >
                <div
                  className="col-sm-2"
                >
                  <label
                    className="form-label"
                    htmlFor="dateRangeSearch"
                  >
                    <h4>
                      Document Date:
                    </h4>
                  </label>
                </div>
                <div
                  className="col"
                >
                  <input
                    className="form-control"
                    id="dateRangeSearch"
                    type="date"
                  />
                </div>
                <div
                  className="col-sm-1"
                >
                  <h4>
                    to
                  </h4>
                </div>
                <div
                  className="col"
                >
                  <input
                    className="form-control"
                    id="dateRangeSearch"
                    type="date"
                  />
                </div>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col-sm-1"
              >
                <h4>
                  If
                </h4>
              </div>
              <div
                className="col"
              >
                <select
                  className="form-control"
                >
                  <option
                    value="0"
                  >
                    Name of Field
                  </option>
                  <option
                    value="article_title"
                  >
                    Article Title
                  </option>
                  <option
                    value="article_name"
                  >
                    Article Name
                  </option>
                  <option
                    value="article_author"
                  >
                    Author
                  </option>
                </select>
              </div>
              <div
                className="col-sm-2"
              >
                <select
                  className="form-control"
                >
                  <option
                    value="0"
                  >
                    Operator
                  </option>
                  <option
                    value="contains"
                  >
                    Contains
                  </option>
                  <option
                    value="not_contains"
                  >
                    Does Not Contain
                  </option>
                  <option
                    value="begins_with"
                  >
                    Begins With
                  </option>
                  <option
                    value="equals"
                  >
                    Is Equal To
                  </option>
                  <option
                    value="less_than"
                  >
                    Is Less Than
                  </option>
                  <option
                    value="less_than_equals"
                  >
                    Is Less Than Or Equal To
                  </option>
                  <option
                    value="more_than"
                  >
                    Is More Than
                  </option>
                  <option
                    value="more_than_equals"
                  >
                    Is More Than Or Equal To
                  </option>
                </select>
              </div>
              <div
                className="col"
              >
                <select
                  className="form-control"
                >
                  <option>
                    Value
                  </option>
                </select>
              </div>
              <div
                className="col-sm-1"
              >
                <a
                  href="/"
                >
                  <img
                    alt="add-search"
                    src={
                      Object {
                        "ReactComponent": Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        },
                        "__esModule": true,
                        "default": "plus_icon.svg",
                      }
                    }
                  />
                </a>
              </div>
              <div
                className="col-sm-1"
              >
                <a
                  href="/"
                >
                  <img
                    alt="add-search"
                    src={
                      Object {
                        "ReactComponent": Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        },
                        "__esModule": true,
                        "default": "dash_icon.svg",
                      }
                    }
                  />
                </a>
              </div>
            </div>
            <button
              className="btn btn-primary"
              disabled={false}
              type="submit"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search Result Page Renders properly 1`] = `
<div
  className="searchSectionStyle container-fluid"
>
  <div
    className="row"
  >
    <div
      className="searchFilterResult col-sm-2"
    >
      <div
        className="pro-sidebar"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="pro-sidebar-inner"
        >
          <div
            className="pro-sidebar-layout"
          >
            <div
              className="pro-sidebar-header"
            >
              <nav
                className="pro-menu"
              >
                <ul>
                  <li
                    className="pro-menu-item pro-sub-menu open"
                  >
                    <div
                      className="pro-inner-item"
                      onClick={[Function]}
                      onKeyPress={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <span
                        className="pro-item-content"
                      >
                        Search Filters:
                      </span>
                      <span
                        className="pro-arrow-wrapper"
                      >
                        <span
                          className="pro-arrow"
                        />
                      </span>
                    </div>
                    <div
                      className="react-slidedown pro-inner-list-item"
                      onTransitionEnd={[Function]}
                    >
                      <div>
                        <ul>
                          <form
                            className=""
                            onSubmit={[Function]}
                          >
                            <div
                              className="row"
                            >
                              <div
                                className="form-group"
                              >
                                <label
                                  className="form-label"
                                  htmlFor="researchMethod"
                                >
                                  Research Method
                                </label>
                                <select
                                  className="form-control"
                                  defaultValue=""
                                  id="researchMethod"
                                  onChange={[Function]}
                                  style={
                                    Object {
                                      "width": "12vw",
                                    }
                                  }
                                  type="text"
                                >
                                  <option
                                    disabled={true}
                                    value=""
                                  >
                                    Select Research Method
                                  </option>
                                </select>
                              </div>
                            </div>
                            <div
                              className="row"
                            >
                              <div
                                className="form-group"
                                style={
                                  Object {
                                    "width": "12vw",
                                  }
                                }
                              >
                                <label
                                  className="form-label"
                                  htmlFor="participants_form"
                                >
                                  Research Participants
                                </label>
                              </div>
                            </div>
                            <div
                              className="row"
                            >
                              <div
                                className="form-group"
                              >
                                <label
                                  className="form-label"
                                  htmlFor="method"
                                >
                                  SE Method
                                </label>
                                <select
                                  className="form-control"
                                  defaultValue=""
                                  id="method"
                                  onChange={[Function]}
                                  style={
                                    Object {
                                      "width": "12vw",
                                    }
                                  }
                                  type="text"
                                >
                                  <option
                                    disabled={true}
                                    value=""
                                  >
                                    Select SE Method
                                  </option>
                                </select>
                              </div>
                            </div>
                            <div
                              className="row"
                            >
                              <div
                                className="form-group"
                              >
                                <label
                                  className="form-label"
                                  htmlFor="methodology"
                                >
                                  SE Methodology
                                </label>
                                <select
                                  className="form-control"
                                  defaultValue=""
                                  id="methodology"
                                  onChange={[Function]}
                                  style={
                                    Object {
                                      "width": "12vw",
                                    }
                                  }
                                  type="text"
                                >
                                  <option
                                    disabled={true}
                                    value=""
                                  >
                                    Select SE Methodology
                                  </option>
                                </select>
                              </div>
                            </div>
                            <div
                              className="row"
                            >
                              <label
                                className="form-label"
                              >
                                Publication Details: 
                              </label>
                              <div
                                className="form-group"
                              >
                                <input
                                  className="form-control"
                                  id="authorSearch"
                                  onChange={[Function]}
                                  placeholder="Author"
                                  type="text"
                                />
                              </div>
                              <div
                                className="form-group"
                              >
                                <input
                                  className="form-control"
                                  id="titleSearch"
                                  onChange={[Function]}
                                  placeholder="Title"
                                  type="text"
                                />
                              </div>
                              <div
                                className="form-group"
                              >
                                <input
                                  className="form-control"
                                  id="linkSearch"
                                  onChange={[Function]}
                                  placeholder="URL or DOI"
                                  type="text"
                                />
                              </div>
                            </div>
                            <div
                              className="row"
                            >
                              <div
                                className="form-group"
                              >
                                <label
                                  className="form-label"
                                  htmlFor="minDate"
                                >
                                  Min Date: 
                                </label>
                                <input
                                  className="form-control"
                                  id="minDate"
                                  onChange={[Function]}
                                  placeholder="Author"
                                  type="month"
                                />
                              </div>
                            </div>
                            <div
                              className="row"
                            >
                              <div
                                className="form-group"
                              >
                                <label
                                  className="form-label"
                                  htmlFor="maxDate"
                                >
                                  Max Date: 
                                </label>
                                <input
                                  className="form-control"
                                  id="maxDate"
                                  onChange={[Function]}
                                  placeholder="Title"
                                  type="month"
                                />
                              </div>
                            </div>
                            <button
                              className="seer-button-styling btn btn-primary"
                              disabled={false}
                              type="submit"
                            >
                              Search
                            </button>
                          </form>
                        </ul>
                      </div>
                    </div>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
        <div
          aria-label="overlay"
          className="overlay"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        />
      </div>
    </div>
    <div
      className="pr-0 col"
    >
      <h1
        className="searchTableHeader"
      >
        Search Results
      </h1>
      <div
        className="table-responsive"
      >
        <table
          className="searchTableStyles table table-bordered table-hover"
        >
          <thead>
            <tr>
              <th>
                #
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Title
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Document Type
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Authors
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Journals
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Publisher
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Volume
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Article Page/s
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Publish Date
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  SE Methodologies
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  SE Methods
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Research Methods
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Research Participants
                   
                  
                </u>
              </th>
              <th
                onClick={[Function]}
              >
                <u>
                  Article Link
                   
                  
                </u>
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sign Up Renders properly 1`] = `
<div
  className="container"
>
  <div
    className="mt-5 container"
  >
    <h1
      style={
        Object {
          "color": "#00994C",
          "textAlign": "center",
        }
      }
    >
       
      Register with SEER
    </h1>
    <form
      className=""
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="first_name"
        >
          First Name
        </label>
        <input
          className="form-control"
          id="first_name"
          onChange={[Function]}
          placeholder="John"
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="last_name"
        >
          Last Name
        </label>
        <input
          className="form-control"
          id="last_name"
          onChange={[Function]}
          placeholder="Doe"
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="user_name"
        >
          Username
        </label>
        <input
          className="form-control"
          id="user_name"
          onChange={[Function]}
          placeholder="Enter Username"
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="email"
        >
          Email address
        </label>
        <input
          className="form-control"
          id="email"
          onChange={[Function]}
          placeholder="john.doe@gmail.com"
          required={true}
          type="email"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="form-control"
          id="password"
          onChange={[Function]}
          placeholder="Password must be 8 or more characters"
          required={true}
          type="password"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="confirm_password"
        >
          Confirm Password
        </label>
        <input
          className="form-control"
          id="confirm_password"
          onChange={[Function]}
          placeholder="Password must be 8 or more characters"
          required={true}
          type="password"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="affiliation"
        >
          Affilitiation
        </label>
        <input
          className="form-control"
          id="affiliation"
          onChange={[Function]}
          placeholder="Enter your company, school or university"
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="chooseAccountType"
        >
          Select your account type:
        </label>
        <div
          className="form-check"
        >
          <input
            className="form-check-input"
            disabled={false}
            id="user_radio"
            name="account_type"
            onChange={[Function]}
            required={true}
            type="radio"
            value="user"
          />
          <label
            className="form-check-label"
            htmlFor="user_radio"
            title=""
          >
            Standard User
          </label>
        </div>
        <div
          className="form-check"
        >
          <input
            className="form-check-input"
            disabled={false}
            id="analyst_radio"
            name="account_type"
            onChange={[Function]}
            required={true}
            type="radio"
            value="analyst"
          />
          <label
            className="form-check-label"
            htmlFor="analyst_radio"
            title=""
          >
            Analyst (SERL Members only)
          </label>
        </div>
        <div
          className="form-check"
        >
          <input
            className="form-check-input"
            disabled={false}
            id="moderator_radio"
            name="account_type"
            onChange={[Function]}
            required={true}
            type="radio"
            value="moderator"
          />
          <label
            className="form-check-label"
            htmlFor="moderator_radio"
            title=""
          >
            Moderator (requires authentication)
          </label>
        </div>
        <div
          className="form-check"
        >
          <input
            className="form-check-input"
            disabled={false}
            id="administrator_radio"
            name="account_type"
            onChange={[Function]}
            required={true}
            type="radio"
            value="administrator"
          />
          <label
            className="form-check-label"
            htmlFor="administrator_radio"
            title=""
          >
            Administrator (requires authentication)
          </label>
        </div>
      </div>
      <button
        className="btn btn-primary"
        disabled={false}
        type="submit"
      >
        Register
      </button>
    </form>
  </div>
</div>
`;
